fixed header on mobile devices

--- a/style.css
+++ b/style.css
@@ -209,7 +209,6 @@ a {
   #hero h1 {
     font-size: 5rem;
     margin: 0 auto;
-    color: red;
   }
   #hero p {
     font-size: 2rem;
